[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-czechia"
version = "0.1.0"
description = "Certbot DNS plugin for CZECHIA.COM REST API (DNS-01 challenge support)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "CZECHIA.COM" }
]

dependencies = [
  "certbot>=2.0.0",
  "requests>=2.25.0",
]

keywords = [
  "certbot",
  "letsencrypt",
  "acme",
  "dns",
  "dns-01",
  "czechia",
  "zoner",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Plugins",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Name Service (DNS)",
  "Topic :: Security",
  "Topic :: System :: Installation/Setup",
]

[project.urls]
Homepage = "https://github.com/CZECHIA-COM/certbot-dns-czechia"
Repository = "https://github.com/CZECHIA-COM/certbot-dns-czechia"
Issues = "https://github.com/CZECHIA-COM/certbot-dns-czechia/issues"

[project.entry-points."certbot.plugins"]
dns-czechia = "certbot_dns_czechia.authenticator:Authenticator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
